[metadata]
name = decorators
version = attr: decorators.__version__
author = Mate Farkas
author_email = mate.farkas@sch.hu
description = Example decorators
long_description = file: README.md
url = https://github.com/farkasmate/python-decorators
platforms = all
license = WTFPL
classifiers = Programming Language :: Python :: 3

[options]
packages = find:
